--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,6 @@ dependencies = [
     "rouge_score>=0.1.2",
     "bert_score>=0.3.13",
     "nltk>=3.8.1",
+    "langchain-core==0.3.79",
     "tabulate"
 ]
