add temp ptc classification

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -11,4 +11,7 @@ therapist:
   model: "gpt-4.1-mini"
   temperature: 0.5
 
-  
+eval:
+  ptc_classifier:
+    model: "gpt-4.1-mini"
+    temperature: 0.3
