move conversation type to config, remove old file writing logic

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -6,6 +6,7 @@ patient:
   model: "gpt-4.1-mini"
   temperature: 0.7
   max_attempts: 5
+  conversation_type: "verbose"
   
 # Therapist model
 therapist:
