--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,11 @@ dependencies = [
     "pandas>=2.0.0",
     "datasets>=2.14.0",
     "torch>=2.0.0",
+    "torchvision>=0.15.0",
+    "torchaudio>=2.0.0",
     "transformers>=4.30.0",
     "litellm>=1.0.0",
+    "wandb>=0.15.0",
     "rouge_score>=0.1.2",
     "bert_score>=0.3.13",
     "nltk>=3.8.1",
