--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -15,8 +15,8 @@ therapist:
 
 eval:
   ptc_classifier:
-    model: "gpt-4.1-mini"
-    temperature: 0.5
-    # model: "hosted_vllm/Qwen/Qwen3-30B-A3B-Thinking-2507"
+    # model: "gpt-4.1-mini"
     # temperature: 0.5
-    # api_base: "http://141.142.254.224:9000/v1"
+    model: "hosted_vllm/openai/gpt-oss-120b"
+    temperature: 0.5
+    api_base: "http://141.142.254.222:9000/v1"
