--- a/configs/llama-3.1-8b-instruct.yaml
+++ b/configs/llama-3.1-8b-instruct.yaml
@@ -3,6 +3,7 @@ patient:
   simulator: "eeyore"
   model: "hosted_vllm/meta-llama/Llama-3.1-8B-Instruct"
   temperature: 0.7
+  max_tokens: 1000
   max_attempts: 5
   conversation_type: "verbose"
   api_base: "http://141.142.254.224:9000/v1"
@@ -11,4 +12,5 @@ patient:
 therapist:
   model: "hosted_vllm/meta-llama/Llama-3.1-8B-Instruct"
   temperature: 0.5
+  max_tokens: 1000
   api_base: "http://141.142.254.224:9000/v1"
