debugged synthetic data classification by increasing model context len and reducing completion

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -19,4 +19,5 @@ eval:
     # temperature: 0.5
     model: "hosted_vllm/openai/gpt-oss-120b"
     temperature: 0.5
-    api_base: "http://141.142.254.225:9000/v1"
+    history_limit: 32 # only classify the first 32 messages in the conversation
+    api_base: "http://141.142.254.223:9000/v1"
