chore: add dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,5 +31,6 @@ dependencies = [
     "langchain-core==0.3.79",
     "tabulate",
     "seaborn",
-    "json-repair"
+    "json-repair",
+    "lexicalrichness"
 ]
