--- a/configs/gpt-oss-120b.yaml
+++ b/configs/gpt-oss-120b.yaml
@@ -7,6 +7,7 @@ patient:
   max_attempts: 5
   conversation_type: "verbose"
   api_base: "http://141.142.254.223:9000/v1"
+  max_turns: 15
   
 # Therapist model
 therapist:
