--- a/configs/gpt-oss-120b.yaml
+++ b/configs/gpt-oss-120b.yaml
@@ -5,8 +5,8 @@ patient:
   temperature: 0.7
   max_tokens: 1000
   max_attempts: 5
-  conversation_type: "verbose"
-  api_base: "http://141.142.254.223:9000/v1"
+  conversation_type: "reserved"
+  api_base: "http://141.142.254.221:9000/v1"
   max_turns: 15
   
 # Therapist model
@@ -14,4 +14,4 @@ therapist:
   model: "hosted_vllm/openai/gpt-oss-120b"
   temperature: 0.5
   max_tokens: 1000
-  api_base: "http://141.142.254.223:9000/v1"
+  api_base: "http://141.142.254.221:9000/v1"
