add emotion flowers dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,7 @@ dependencies = [
     "seaborn",
     "json-repair",
     "lexicalrichness",
-    "scikit-learn"
+    "scikit-learn",
+    "spacy==3.7.2",
+    "emoatlas"
 ]
