--- a/configs/gpt-oss-120b.yaml
+++ b/configs/gpt-oss-120b.yaml
@@ -11,7 +11,6 @@ patient:
   
 # Therapist model
 therapist:
-  model: "hosted_vllm/openai/gpt-oss-120b"
+  model: "gpt-4.1-mini"
   temperature: 0.5
   max_tokens: 1000
-  api_base: "http://141.142.254.222:9000/v1"
