--- a/configs/qwen3-30b-a3b-instruct-2507.yaml
+++ b/configs/qwen3-30b-a3b-instruct-2507.yaml
@@ -6,7 +6,7 @@ patient:
   max_tokens: 1000
   max_attempts: 5
   conversation_type: "plain"
-  api_base: "http://141.142.254.227:9000/v1"
+  api_base: "http://convai-srv-01.cs.illinois.edu:9000/v1"
   max_turns: 20
   
 # Therapist model
